# gazetta

./: Cargo.toml  README.md  rustfmt.toml  search-index.js
ansi_term/: enum.Colour.html  fn.ANSIByteStrings.html  fn.ANSIStrings.html  index.html  sidebar-items.js  struct.ANSIGenericString.html  struct.ANSIGenericStrings.html  struct.ANSIString.html  struct.ANSIStrings.html  struct.Infix.html  struct.Prefix.html  struct.Style.html  struct.Suffix.html  type.ANSIByteString.html  type.ANSIByteStrings.html  type.ANSIString.html  type.ANSIStrings.html
bitflags/: index.html  macro.bitflags!.html  macro.bitflags.html  sidebar-items.js
chrono/: constant.MAX_DATE.html  constant.MIN_DATE.html  enum.Weekday.html  index.html  sidebar-items.js  struct.Date.html  struct.DateTime.html  struct.Duration.html  struct.ParseWeekdayError.html  trait.Datelike.html  trait.Timelike.html
clap/: enum.AppSettings.html  enum.ArgSettings.html  enum.ClapErrorType.html  enum.ErrorKind.html  enum.Format.html  enum.Shell.html  index.html  macro._clap_count_exprs!.html  macro._clap_count_exprs.html  macro.arg_enum!.html  macro.arg_enum.html  macro.clap_app!.html  macro.clap_app.html  macro.crate_authors.html  macro.crate_version!.html  macro.crate_version.html  macro.simple_enum!.html  macro.value_t!.html  macro.value_t.html  macro.value_t_or_exit!.html  macro.value_t_or_exit.html  macro.values_t!.html  macro.values_t.html  macro.values_t_or_exit!.html  macro.values_t_or_exit.html  sidebar-items.js  struct.App.html  struct.Arg.html  struct.ArgGroup.html  struct.ArgMatches.html  struct.ClapError.html  struct.Error.html  struct.OsValues.html  struct.SubCommand.html  struct.Values.html  type.Result.html
cli/: Cargo.toml
cli/src/: lib.rs
core/: Cargo.toml
core/src/: error.rs  lib.rs  render.rs  util.rs  yaml.rs
core/src/model/: entry.rs  index.rs  meta.rs  mod.rs  source.rs  yaml.rs
core/src/view/: context.rs  index.rs  mod.rs  page.rs  site.rs
data/: config.yaml  index.md
gazetta/: enum.SourceError.html  index.html  sidebar-items.js  struct.AnnotatedError.html  struct.Entry.html  struct.Source.html  trait.Meta.html  type.RenderError.html
gazetta_cli/: fn.gen_completions.html  fn.run.html  gen_completions.v.html  index.html  sidebar-items.js
gazetta_core/: index.html  sidebar-items.js
gazetta_model_ext/: SourceMeta.t.html  index.html  sidebar-items.js  struct.EntryMeta.html  struct.Key.html  struct.Link.html  struct.Person.html  struct.SourceMeta.html
gazetta_render_ext/: Markdown.t.html  index.html  sidebar-items.js  struct.Assets.html  struct.Content.html  struct.Date.html  struct.Markdown.html
getopts/: enum.Fail.html  enum.FailType.html  enum.HasArg.html  enum.Occur.html  enum.ParsingStyle.html  index.html  sidebar-items.js  struct.Matches.html  struct.Options.html  type.Result.html
glob/: fn.glob.html  fn.glob_with.html  index.html  sidebar-items.js  struct.GlobError.html  struct.MatchOptions.html  struct.Paths.html  struct.Pattern.html  struct.PatternError.html  type.GlobResult.html
horrorshow/: index.html  macro.box_html!.html  macro.box_html.html  macro.html!.html  macro.html.html  macro.labels!.html  macro.labels.html  macro.labels_sep_by!.html  macro.labels_sep_by.html  macro.raw!.html  macro.raw.html  macro.template!.html  macro.template.html  sidebar-items.js  struct.Error.html  struct.FnRenderer.html  struct.Raw.html  struct.TemplateBuffer.html  trait.Render.html  trait.RenderBox.html  trait.RenderMut.html  trait.RenderOnce.html  trait.Template.html
idna/: fn.domain_to_ascii.html  fn.domain_to_unicode.html  index.html
kernel32/: index.html
lazy_static/: index.html  macro.__lazy_static_create!.html  macro.lazy_static!.html  trait.__Deref.html
libc/: fn.glob.html  fn.glob64.html  index.html  struct.Dl_info.html  struct.addrinfo.html  struct.cpu_set_t.html  struct.dirent.html  struct.dirent64.html  struct.dqblk.html  struct.epoll_event.html  struct.fd_set.html  struct.flock.html  struct.fsid_t.html  struct.glob64_t.html  struct.glob_t.html  struct.hostent.html  struct.ifaddrs.html  struct.in6_addr.html  struct.in_addr.html  struct.iovec.html  struct.ip_mreq.html  struct.ipc_perm.html  struct.ipv6_mreq.html  struct.lconv.html  struct.mcontext_t.html  struct.mq_attr.html  struct.msghdr.html  struct.passwd.html  struct.pollfd.html  struct.pthread_attr_t.html  struct.pthread_cond_t.html  struct.pthread_condattr_t.html  struct.pthread_mutex_t.html  struct.pthread_mutexattr_t.html  struct.pthread_rwlock_t.html  struct.rlimit.html  struct.rlimit64.html  struct.rusage.html  struct.sched_param.html  struct.sem_t.html  (+27 more)
matches/: index.html  macro._matches_tt_as_expr_hack.html  macro._tt_as_expr_hack!.html  macro.assert_matches.html  macro.debug_assert_matches.html  macro.matches!.html  macro.matches.html
model-ext/: Cargo.toml
model-ext/src/: lib.rs  link.rs  meta.rs  person.rs  util.rs  yaml.rs
num/: fn.abs.html  fn.abs_sub.html  fn.checked_pow.html  fn.clamp.html  fn.one.html  fn.pow.html  fn.range.html  fn.range_inclusive.html  fn.range_step.html  fn.range_step_inclusive.html  fn.signum.html  fn.zero.html  index.html  sidebar-items.js  trait.Bounded.html  trait.CheckedAdd.html  trait.CheckedDiv.html  trait.CheckedMul.html  trait.CheckedSub.html  trait.Float.html  trait.FromPrimitive.html  trait.Integer.html  trait.Num.html  trait.NumCast.html  trait.One.html  trait.PrimInt.html  trait.Saturating.html  trait.Signed.html  trait.ToPrimitive.html  trait.Unsigned.html  trait.Zero.html
num_integer/: fn.binomial.html  fn.div_floor.html  fn.div_mod_floor.html  fn.div_rem.html  fn.gcd.html  fn.lcm.html  fn.mod_floor.html  fn.multinomial.html  index.html  struct.IterBinomial.html  trait.Integer.html
num_iter/: fn.range.html  fn.range_inclusive.html  fn.range_step.html  fn.range_step_inclusive.html  index.html  struct.Range.html  struct.RangeInclusive.html  struct.RangeStep.html  (+1 more)
render-ext/: Cargo.toml
render-ext/css/: Cargo.toml
render-ext/css/src/: lib.rs  main.rs
render-ext/src/: assets.rs  content.rs  date.rs  head.rs  highlight.rs  lib.rs  markdown.rs
(+3021 files in other folders)
