[package]
name = "gazetta"
version = "0.3.0"
authors = ["Steven Allen <steven@stebalien.com>"]
description = """
A static site generator framework.

If you want to use or extend gazetta, see the gazetta-bin crate.
"""
documentation = "https://docs.rs/gazetta"
homepage = "http://stebalien.com/projects/gazetta"
repository = "https://github.com/Stebalien/gazetta"
keywords = ["staticsite", "website", "blog"]
license = "GPL-3.0"
edition = "2018"

[dependencies.gazetta-core]
path = "core"
version = "0.3.0"

[dependencies.gazetta-render-ext]
path = "render-ext"
version = "0.3.0"

[dependencies.gazetta-model-ext]
path = "model-ext"
version = "0.3.0"

[dependencies.gazetta-cli]
path = "cli"
version = "0.3.0"

[workspace]
