[workspace]
members = ["core", "render-ext", "model-ext", "cli", "render-ext/css"]

[workspace.package]
version = "0.5.5"
authors = ["Steven Allen <steven@stebalien.com>"]
homepage = "http://stebalien.com/projects/gazetta"
repository = "https://github.com/Stebalien/gazetta"
keywords = ["staticsite", "website", "blog"]
license = "GPL-3.0"
edition = "2024"

[workspace.dependencies]
inkjet = { version = "0.11.1", default-features = false }
gazetta-core = { path = "core", version = "=0.5.5" }
gazetta-cli = { path = "cli", version = "=0.5.5" }
gazetta-render-ext = { path = "render-ext", version = "=0.5.5", default-features = false }
gazetta-model-ext = { path = "model-ext", version = "=0.5.5" }

[package]
name = "gazetta"
description = """
A static site generator framework.

If you want to use or extend gazetta, see the gazetta-bin crate.
"""
version.workspace = true
authors.workspace = true
keywords.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
gazetta-core.workspace = true
gazetta-cli.workspace = true
gazetta-render-ext.workspace = true
gazetta-model-ext.workspace = true

[features]
syntax-highlighting = ["gazetta-render-ext/syntax-highlighting"]
default = ["syntax-highlighting"]
