[package]
name = "gazetta-cli"
version = "0.2.0"
authors = ["Steven Allen <steven@stebalien.com>"]
description = "A static site generator framework. Shared CLI code."
documentation = "https://stebalien.github.io/gazetta/gazetta_cli/"
homepage = "http://stebalien.com/projects/gazetta"
repository = "https://github.com/Stebalien/gazetta"
keywords = ["staticsite", "website", "blog"]
license = "GPL-3.0"

[dependencies.gazetta-core]
path = "../core"
version = "0.2"

[dependencies]
slug = "0.1"
lazy_static = "0.2"
chrono = "0.2"
clap = "^2.9"
horrorshow = "0.6"
