[package]
name = "gazetta-cli"
description = "A static site generator framework. Shared CLI code."
documentation = "https://docs.rs/gazetta_cli/"
version.workspace = true
authors.workspace = true
keywords.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
gazetta-core.workspace = true
slug = "0.1"
lazy_static = "1.5"
chrono = "0.4"
clap = { version = "^4.5", features = ["derive", "string"] }
horrorshow = "0.8"
