[package]
name = "gazetta-core"
version = "0.3.1"
authors = ["Steven Allen <steven@stebalien.com>"]
description = "A static site generator framework. Core."
documentation = "https://stebalien.github.io/gazetta/gazetta_core/"
homepage = "http://stebalien.com/projects/gazetta"
repository = "https://github.com/Stebalien/gazetta"
keywords = ["staticsite", "website", "blog"]
license = "GPL-3.0"
edition = "2018"

[dependencies]
chrono = "0.4"
glob = "0.3"
yaml-rust = "0.4"
lazy_static = "1.0"
horrorshow = "0.8.2"
url = "2"
str_stack = "0.1"
