[package]
name = "gazetta-core"
description = "A static site generator framework. Core."
documentation = "https://docs.rs/gazetta_core/"
version.workspace = true
authors.workspace = true
keywords.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
chrono = "0.4"
glob = "0.3"
yaml-rust = "0.4"
horrorshow = "0.8.4"
url = "2"
str_stack = "0.1"
icu_collator = "2.0.0"
thiserror = "2.0.12"
