[package]
name = "gazetta-model-ext"
version = "0.1.0"
authors = ["Steven Allen <steven@stebalien.com>"]
description = "A static site generator framework. Extra models."
documentation = "https://stebalien.github.io/gazetta/gazetta_model_ext/"
repository = "https://github.com/Stebalien/gazetta"
keywords = ["staticsite", "website", "blog"]
license = "GPL-3.0"

[dependencies.gazetta-core]
path = "../core"

[dependencies]
lazy_static = "0.1"
