[package]
name = "gazetta-model-ext"
description = "A static site generator framework. Extra models."
documentation = "https://docs.rs/gazetta_model_ext/"
version.workspace = true
authors.workspace = true
keywords.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
gazetta-core.workspace = true
