[package]
name = "gazetta-render-ext"
version = "0.3.0"
authors = ["Steven Allen <steven@stebalien.com>"]
description = "A static site generator framework. Extra render code."
documentation = "https://stebalien.github.io/gazetta/gazetta_render_ext/"
homepage = "http://stebalien.com/projects/gazetta"
repository = "https://github.com/Stebalien/gazetta"
keywords = ["staticsite", "website", "blog"]
license = "GPL-3.0"
edition = "2018"

[dependencies.gazetta-core]
path = "../core"
version = "0.3.1"

[dependencies]
horrorshow = "0.8"
pulldown-cmark = "0.13.0"
