[package]
name = "gazetta-render-ext"
description = "A static site generator framework. Extra render code."
documentation = "https://docs.rs/gazetta_render_ext/"
version.workspace = true
authors.workspace = true
keywords.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
horrorshow = "0.8"
pulldown-cmark = { version = "0.13.0", default-features = false }
gazetta-core.workspace = true
